--- a/index.html
+++ b/index.html
@@ -118,7 +118,56 @@
                 </div>
             </div>
         </section>
-
+        <section id="section1" class="section-area section-white">
+            <div class="section__left-container" >
+                <div class="section__img__container">
+                    <img class="section__img" src="./src/assets/ImgSec1.PNG" alt="Imagen 1">
+                </div>
+            </div>
+            <div class="section__right-container" >
+                <div class="section__text__container">
+                    <h1 class="section__h1">Crea un lugar especial con tus amigos</h1>
+                    <p class="section__p">
+                        Chat App es un lugar donde se pueden organizan canales ordenados por temas, 
+                        en los que puedes colaborar, compartir o simplemente hablar de tu día sin 
+                        monopolizar un chat de grupo.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section id="section2" class="section-area section-grey">
+            <div class="section__left-container" >
+                <div class="section__text__container">
+                    <h1 class="section__h1">Donde es fácil pasar el rato</h1>
+                    <p class="section__p">
+                        Entra en un canal de informativo cuando estés libre. Tambien puedes hablar con
+                        tus amigos gracias a los mensajes directos. 
+                    </p>
+                </div>
+            </div>
+            <div class="section__right-container" >
+                <div class="section__img__container">
+                    <img class="section__img" src="./src/assets/ImgSec2.PNG" alt="Imagen 2">
+                </div>
+            </div>
+        </section>
+        <section id="section3" class="section-area section-white">
+            <div class="section__left-container" >
+                <div class="section__img__container">
+                    <img class="section__img" src="./src/assets/ImgSec3.PNG" alt="Imagen 3">
+                </div>
+            </div>
+            <div class="section__right-container" >
+                <div class="section__text__container">
+                    <h1 class="section__h1">De unos pocos fans a un montón</h1>
+                    <p class="section__p">
+                        Establece cualquier comunidad con las herramientas de moderación y el acceso 
+                        personalizado de miembros. Concédeles poderes especiales, crea canales privados 
+                        y mucho más.
+                    </p>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="./src/js/home.js"></script>
 </body>
