--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="section__right-container" >
                 <div class="section__img__container">
-                    <img class="section__img" src="./src/assets/ImgSec2.PNG" alt="Imagen 2">
+                    <img class="section__img  img__right" src="./src/assets/ImgSec2.PNG" alt="Imagen 2">
                 </div>
             </div>
         </section>
