left text modified

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </section>
         <section id="section2" class="section-area section-grey">
             <div class="section__left-container" >
-                <div class="section__text__container">
+                <div class="section__text__container left">
                     <h1 class="section__h1">Donde es fácil pasar el rato</h1>
                     <p class="section__p">
                         Entra en un canal de informativo cuando estés libre. Tambien puedes hablar con
