footer section added

--- a/index.html
+++ b/index.html
@@ -171,4 +171,54 @@
     </div>
     <script src="./src/js/home.js"></script>
 </body>
+<footer>
+    <div class="footer__container">
+        <div class="footer__left-container">
+            
+            <h2 class="footer__h2">Crea tu lugar ideal</h2>
+            <h3 class="footer__h3">Siguenos en:</h3>
+            <div class="icons__container">
+                <i class="fa-brands fa-facebook social-icons"></i>
+                <!-- <FontAwesomeIcon icon="fa-brands fa-facebook" /> -->
+                <i class="fa-brands fa-twitter social-icons"></i>
+                <!-- <FontAwesomeIcon icon="fa-brands fa-twitter" /> -->
+                <i class="fa-brands fa-instagram social-icons"></i>
+                <!-- <FontAwesomeIcon icon="fa-brands fa-instagram" /> -->
+                <i class="fa-brands fa-youtube social-icons"></i>
+                <!-- <FontAwesomeIcon icon="fa-brands fa-youtube" /> -->
+            </div>
+        </div>
+        <div class="footer__right-container">
+            <div class="footer__info product">
+                <span class="footer__span">Producto</span>
+                <a href="" class="footer__a">Chat App</a>
+                <a href="" class="footer__a">Canales</a>
+                <a href="" class="footer__a">Mensajes directos</a>
+            </div>
+            <div class="footer__info company">
+                <span class="footer__span">Compañía</span>
+                <a href="" class="footer__a">Sobre nosotros</a>
+                <a href="" class="footer__a">Trabajos</a>
+                <a href="" class="footer__a">Marca</a>
+                <a href="" class="footer__a">Noticias</a>
+            </div>
+            <div class="footer__info resources">
+                <span class="footer__span">Recursos</span>
+                <a href="" class="footer__a">Soporte tecnico</a>
+                <a href="" class="footer__a">Seguridad</a>
+                <a href="" class="footer__a">Blog</a>
+                <a href="" class="footer__a">Opiniones</a>
+                <a href="" class="footer__a">Licencias</a>
+            </div>
+            <div class="footer__info politics">
+                <span class="footer__span">Politicas</span>
+                <a href="" class="footer__a">Condiciones</a>
+                <a href="" class="footer__a">Privacidad</a>
+                <a href="" class="footer__a">Ajuste de cookies</a>
+                <a href="" class="footer__a">Directivas</a>
+                <a href="" class="footer__a">Licencias</a>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
