--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                         <p class="navbar__logo__text">Chat App</p>
                     </a>
                     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
+                        <span id="pri" class="white-line" aria-hidden="true"></span>
+                        <span id="pri" class="white-line" aria-hidden="true"></span>
+                        <span id="pri" class="white-line" aria-hidden="true"></span>
                         
                     </a>
                 </div>
@@ -109,10 +109,10 @@
                     </div>
                 </div>
                 <div class="image__right__container">
-                    <div>
+                    <div class="image__right__div">
                         <img id="messageIcon" class="image__right  animation" src="./src/assets/chat.png" alt="">
                     </div>
-                    <div>
+                    <div class="image__right__div">
                         <img class="image__right" src="./src/assets/robot.png" alt="">
                     </div>
                 </div>
