--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                         </p>
                     </div>
                     <div class="home__message__btn">
-                        <a href="#" class="btn__download"><i class="fa-solid fa-download icons"></i>Descargar para Windows</a>
-                        <a href="#" class="btn__browser">Abrir Chat en tu navegador</a>
+                        <a href="#" class="btn__download home__btn"><i class="fa-solid fa-download icons"></i>Descargar para Windows</a>
+                        <a id="browser" href="#" class="btn__browser home__btn">Abrir Chat en tu navegador</a>
                     </div>
                 </div>
                 <div class="image__right__container">
