mobile responsive on homepage fixed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="navbar-link navbar__text">
                                 More
                             </a>
-                            <div class="navbar-dropdown">
+                            <!-- <div class="navbar-dropdown">
                                 <a class="navbar-item ">
                                     About
                                 </a>
@@ -60,7 +60,7 @@
                                 <a class="navbar-item">
                                     Report an issue
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- <div class="theme__container__btn">
                             <label id="darkModeLabel" class="toggle-dark-mode light-theme-toggle s-cursor-pointer s-relative s-cross-center s-mr-1">
@@ -112,7 +112,7 @@
                     <div class="image__right__div">
                         <img id="messageIcon" class="image__right  animation" src="./src/assets/chat.png" alt="">
                     </div>
-                    <div class="image__right__div">
+                    <div class="image__right__div robot">
                         <img class="image__right" src="./src/assets/robot.png" alt="">
                     </div>
                 </div>
@@ -170,6 +170,7 @@
         </section>
     </div>
     <script src="./src/js/home.js"></script>
+    <script src="./src/js/NavbarBurger.js"></script>
 </body>
 <footer>
     <div class="footer__container">
