--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                         <a id="browser" href="#" class="btn__browser home__btn">Abrir Chat en tu navegador</a>
                     </div>
                 </div>
-                <div class="image__right__container">
+                <div class="image__right__container hidden">
                     <div class="image__right__div">
                         <img id="messageIcon" class="image__right  animation" src="./src/assets/chat.png" alt="">
                     </div>
-                    <div class="image__right__div robot">
+                    <div class="image__right__div hidden">
                         <img class="image__right" src="./src/assets/robot.png" alt="">
                     </div>
                 </div>
