sections responsive design on mobile fixed

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
         </section>
         <section id="section2" class="section-area section-grey">
-            <div class="section__left-container" >
+            <div id="section2__left-container" class="section__left-container" >
                 <div class="section__text__container left">
                     <h1 class="section__h1">Donde es fácil pasar el rato</h1>
                     <p class="section__p">
@@ -145,7 +145,7 @@
                     </p>
                 </div>
             </div>
-            <div class="section__right-container" >
+            <div id="section2__right-container" class="section__right-container" >
                 <div class="section__img__container">
                     <img class="section__img  img__right" src="./src/assets/ImgSec2.PNG" alt="Imagen 2">
                 </div>
