footer responsive design on mobile fixed

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="footer__container">
         <div class="footer__left-container">
             
-            <h2 class="footer__h2">Crea tu lugar ideal</h2>
+            <h2 class="footer__h2">CREA TU LUGAR</h2>
             <h3 class="footer__h3">Siguenos en:</h3>
             <div class="icons__container">
                 <i class="fa-brands fa-facebook social-icons"></i>
