theme__container__btn position fixed on mobile responsive design

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <div class="all">
         <section id='navbar_section'>
             <nav id="nav-sec" class="navbar" role="navigation" aria-label="main navigation">
+                <div class="theme__container__btn">
+                    <label id="darkModeLabel" class="toggle-dark-mode light-theme-toggle s-cursor-pointer s-relative s-cross-center s-mr-1">
+                        <input id="darkModeInput" class="toggle-input s-opacity-0" type="checkbox" onclick="darkMode()">
+                        <span id="darkModeSpan" class="slider light-theme-span dot s-absolute s-h-24px s-w-24px s-cursor-pointer s-shadow-bottom s-circle"></span>
+                    </label>
+                </div>
                 <div class="navbar-brand navbar__brand">
                     <a class="navbar-item nav-bar__logo__container" href="#">
                         <!-- <img id="navbar__logo" class="navbar__logo" src="./src/assets/logoWhite.png"> -->
@@ -79,12 +85,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="theme__container__btn">
+                <!-- <div class="theme__container__btn">
                     <label id="darkModeLabel" class="toggle-dark-mode light-theme-toggle s-cursor-pointer s-relative s-cross-center s-mr-1">
                         <input id="darkModeInput" class="toggle-input s-opacity-0" type="checkbox" onclick="darkMode()">
                         <span id="darkModeSpan" class="slider light-theme-span dot s-absolute s-h-24px s-w-24px s-cursor-pointer s-shadow-bottom s-circle"></span>
                     </label>
-                </div>
+                </div> -->
             </nav>
         </section>
         <section id='homepage'>
