responsive conditions fixed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <nav id="nav-sec" class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand navbar__brand">
                     <a class="navbar-item nav-bar__logo__container" href="#">
-                        <!-- <img id="navbar__logo" class="navbar__logo" src="./src/assets/logoWhite.png"> -->
                         <div class="navbar__logo"></div>
                         <p class="navbar__logo__text">Chat App</p>
                     </a>
@@ -52,28 +51,7 @@
                             <a class="navbar-link navbar__text">
                                 More
                             </a>
-                            <!-- <div class="navbar-dropdown">
-                                <a class="navbar-item ">
-                                    About
-                                </a>
-                                <a class="navbar-item">
-                                    Jobs
-                                </a>
-                                <a class="navbar-item">
-                                    Contact
-                                </a>
-                                <hr class="navbar-divider">
-                                <a class="navbar-item">
-                                    Report an issue
-                                </a>
-                            </div> -->
                         </div>
-                        <!-- <div class="theme__container__btn">
-                            <label id="darkModeLabel" class="toggle-dark-mode light-theme-toggle s-cursor-pointer s-relative s-cross-center s-mr-1">
-                                <input id="darkModeInput" class="toggle-input s-opacity-0" type="checkbox" onclick="darkMode()">
-                                <span id="darkModeSpan" class="slider light-theme-span dot s-absolute s-h-24px s-w-24px s-cursor-pointer s-shadow-bottom s-circle"></span>
-                            </label>
-                        </div> -->
                     </div>
                     <div id="navbar__end1" class="navbar-end navbar__end">
                         <div class="navbar-item">
@@ -85,12 +63,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="theme__container__btn">
-                    <label id="darkModeLabel" class="toggle-dark-mode light-theme-toggle s-cursor-pointer s-relative s-cross-center s-mr-1">
-                        <input id="darkModeInput" class="toggle-input s-opacity-0" type="checkbox" onclick="darkMode()">
-                        <span id="darkModeSpan" class="slider light-theme-span dot s-absolute s-h-24px s-w-24px s-cursor-pointer s-shadow-bottom s-circle"></span>
-                    </label>
-                </div> -->
             </nav>
         </section>
         <section id='homepage'>
@@ -228,5 +200,6 @@
 
     <script src="./src/js/home.js"></script>
     <script src="./src/js/NavbarBurger.js"></script>
+    <!-- <script src="./src/js/windowSize.js"></script> -->
 </body>
 </html>
