new changes on responsive design

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="image__right__div">
                         <img id="messageIcon" class="image__right  animation" src="./src/assets/chat.png" alt="">
                     </div>
-                    <div class="image__right__div hidden">
+                    <div class="image__right__div robot-hide">
                         <img class="image__right" src="./src/assets/robot.png" alt="">
                     </div>
                 </div>
