more changes on large screen design

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="navbar-item navbar__text">
                             About
                         </a>
-                        <div class="navbar-item has-dropdown is-hoverable">
+                        <div class="navbar-item has-dropdown is-hoverable drop">
                             <a class="navbar-link navbar__text">
                                 More
                             </a>
